name:                bitcoin-rpc
version:             0.3.0.0
synopsis:            Library to communicate with the Satoshi Bitcoin daemon
license:             MIT
license-file:        LICENSE
author:              Jan Vornberger <jan@uos.de>
maintainer:          Jan Vornberger <jan@uos.de>
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  build-depends: base == 4.*
                 , ghc-prim
                 , text == 0.11.*
                 , unordered-containers == 0.2.*
                 , aeson == 0.6.*
                 , attoparsec == 0.10.*
                 , bytestring == 0.9.*
                 , network == 2.3.*
                 , HTTP == 4000.2.*
                 , watchdog == 0.2.*
                 , containers == 0.4.*
                 , unix == 2.5.*
                 , mtl == 2.1.*
                 , cereal == 0.3.*
  exposed-modules: Network.BitcoinRPC
                   , Network.BitcoinRPC.Events
                   , Network.BitcoinRPC.Events.MarkerAddresses
                   , Network.BitcoinRPC.Types
                   , Network.BitcoinRPC.MarkerAddresses
  ghc-options: -O -Wall

test-suite testsuite
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends: base == 4.*
                 , ghc-prim
                 , text == 0.11.*
                 , unordered-containers == 0.2.*
                 , aeson == 0.6.*
                 , attoparsec == 0.10.*
                 , bytestring == 0.9.*
                 , network == 2.3.*
                 , HTTP == 4000.2.*
                 , watchdog == 0.2.*
                 , containers == 0.4.*
                 , unix == 2.5.*
                 , mtl == 2.1.*
                 , cereal == 0.3.*
                 , HUnit == 1.2.*
                 , QuickCheck == 2.4.*
                 , test-framework == 0.6.*
                 , test-framework-hunit == 0.2.*
                 , test-framework-quickcheck2 == 0.2.*
  ghc-options: -O -Wall
